--- a/.gitignore
+++ b/.gitignore
@@ -20,8 +20,8 @@ Makefile
 
 *.dblite
 excons.cache
-*.automake.inputs
-*.automake.outputs
+*.automake.*
+*.automake.*
 /scons-build
 /.build
 /win/nasm-*/
