--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,12 @@
 .DS_Store
-Makefile.in
-aclocal.m4
-ar-lib
-autom4te.cache
-compile
-config.guess
-config.h.in
-config.sub
-configure
-depcomp
-install-sh
-ltmain.sh
-missing
 *.o
 *.lo
 .deps/
 .libs/
-Makefile
 
-*.dblite
-excons.cache
-*.automake.*
-*.automake.*
+/excons.cache
 /scons-build
 /.build
 /win/nasm-*/
-
+/*.dblite
+/*.automake.*
